array.island.Island.scala.error
Erreur de compilation :
Island:11: error: identifier expected but ']' found.
  island(num [i::])
                 ^Island:14: error: ']' expected but '}' found.
} 
^